--- a/Day3_sassLandingpage/index.html
+++ b/Day3_sassLandingpage/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="imgdiv">
-                <img src="/assets/bg image.svg" alt="background image">
+                <img src="/Day3_sassLandingpage/assets/bg image.svg" alt="background image">
             </div>
             
         </div>
@@ -40,33 +40,33 @@
     <!-- companies section -->
 
         <div class="companysection">
-            <img src="/assets/hubspot.svg" alt="">
-            <img src="/assets/intercom.svg" alt="">
-            <img src="/assets/google.svg" alt="">
-            <img src="/assets/microsoft.svg" alt="">
-            <img src="/assets/intercom.svg" alt="">
-            <img src="/assets/microsoft.svg" alt="">
-            <img src="/assets/hubspot.svg" alt="">
+            <img src="/Day3_sassLandingpage/assets/hubspot.svg" alt="">
+            <img src="/Day3_sassLandingpage/assets/intercom.svg" alt="">
+            <img src="/Day3_sassLandingpage/assets/google.svg" alt="">
+            <img src="/Day3_sassLandingpage/assets/microsoft.svg" alt="">
+            <img src="/Day3_sassLandingpage/assets/intercom.svg" alt="">
+            <img src="/Day3_sassLandingpage/assets/microsoft.svg" alt="">
+            <img src="/Day3_sassLandingpage/assets/google.svg" alt="">
         </div>
 <!-- services section -->
 
         <div class="servicessection">
             <div class="service1">
-                <img src="/assets/mobile section.svg" alt="" class="iconclass">
+                <img src="/Day3_sassLandingpage/assets/mobile section.svg" alt="" class="iconclass">
                 <h3>Mobile app</h3>
                 <p>Lorem ipsum dolor sit amet consecte turole
                     adipiscing elit semper dalaracc lacus velolte facilisis
                     volutpat est velitolm.</p>
             </div>
             <div class="service2">
-                <img src="/assets/mac section.svg" alt="" class="iconclass">
+                <img src="/Day3_sassLandingpage/assets/mac section.svg" alt="" class="iconclass">
                 <h3>Desktop app</h3>
                 <p>Lorem ipsum dolor sit amet consecte turole
                     adipiscing elit semper dalaracc lacus velolte facilisis
                     volutpat est velitolm.</p>
             </div>
             <div class="service3">
-                <img src="/assets/user section.svg" alt="" class="iconclass">
+                <img src="/Day3_sassLandingpage/assets/user section.svg" alt="" class="iconclass">
                 <h3>Multiple users</h3>
                 <p>Lorem ipsum dolor sit amet consecte turole
                     adipiscing elit semper dalaracc lacus velolte facilisis
@@ -88,7 +88,7 @@
 
             </div>
             <div class="custsec2">
-                <img src="/assets/cs.svg" alt="">
+                <img src="/Day3_sassLandingpage/assets/cs.svg" alt="">
             </div>
         </div>
 
@@ -106,7 +106,7 @@
 
             </div>
             <div class="custsec2">
-                <img src="/assets/cs2.svg" alt="">
+                <img src="/Day3_sassLandingpage/assets/cs2.svg" alt="">
             </div>
         </div>
 
@@ -124,7 +124,7 @@
         
                     </div>
                     <div class="custsec2">
-                        <img src="/assets/cs.svg" alt="">
+                        <img src="/Day3_sassLandingpage/assets/cs.svg" alt="">
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
 
             </div>
             <div class="custsec2">
-                <img src="/assets/cs3.svg" alt="">
+                <img src="/Day3_sassLandingpage/assets/cs3.svg" alt="">
             </div>
         </div>
         <!-- customer service section 3-->
@@ -159,7 +159,7 @@
 
             </div>
             <div class="custsec2">
-                <img src="/assets/cs4.png" alt="">
+                <img src="/Day3_sassLandingpage/assets/cs4.png" alt="">
             </div>
         </div>
         <!-- cta section -->
