--- a/day14_newsBlog/index.html
+++ b/day14_newsBlog/index.html
@@ -12,7 +12,7 @@
         <a href="https://www.linkedin.com/in/abhi-ram-basa/">
             <img src="/day14_newsBlog/assets/linkedin.svg" alt="" class="social-icons">
         </a>
-        <a href="">
+        <a href="https://github.com/abhiram2101/WebPractice101/tree/main/day14_newsBlog">
             <img src="/day14_newsBlog/assets/github.svg" alt="" class="social-icons">
         </a>
     </div>
