Login and Sign up pages added

--- a/day17_wasteProcessingWebsite/index.html
+++ b/day17_wasteProcessingWebsite/index.html
@@ -10,7 +10,9 @@
     <header>
         <div class="header-section">
             <div class="header-logo">
+                <a href="index.html">
                 <img src="/day17_wasteProcessingWebsite/assets/logo_master.png" alt="" class="header-logo">
+                </a>
             </div>
             <div class="header-pages">
                 <a href="">home</a>
@@ -19,7 +21,7 @@
                 <a href="">contact</a>
             </div>
             <div class="header-btn">
-                <button class="btn-small">register</button>
+                <a href="/day17_wasteProcessingWebsite/register.html" class="btn-small">register</a>
             </div>
         </div>
     </header>
@@ -133,9 +135,32 @@
 
 
     <!-- Testimonial section -->
-    <!-- <div class="Testimonial-section">
-
-    </div> -->
+    <div class="Testimonial-section">
+        <div class="Testimonial-1">
+            <p>Testimonial</p>
+            <h3>What people say
+                about us.</h3>
+        </div>
+        <div class="Testimonial-2">
+            <p>“On the Windows talking painted pasture yet its express parties use. Sure last upon he same as knew next. Of believed or diverted no.”</p>
+            <p> <b>Mike taylor</b></p>
+            <p>Lahore, Pakistan</p>
+        </div>
+        <div class="Testimonial-3">
+            <img src="/day17_wasteProcessingWebsite/assets/Ellipse 29.png" alt="">
+        </div>
+        <div class="Testimonial-4">
+            <p>“On the Windows talking painted pasture yet its express parties use. Sure last upon he same as knew next. Of believed or diverted no.”</p>
+            <p><b>Mike taylor</b></p>
+            <p>Lahore, Pakistan</p>
+        </div>
+        <div class="Testimonial-5">
+            <img src="/day17_wasteProcessingWebsite/assets/Ellipse 26.png" alt="">
+            <img src="/day17_wasteProcessingWebsite/assets/Ellipse 26.png" alt="">
+            <img src="/day17_wasteProcessingWebsite/assets/Ellipse 26.png" alt="">
+            
+        </div> 
+    </div>
 
 
 
@@ -146,6 +171,23 @@
         <img src="/day17_wasteProcessingWebsite/assets/15636900098394-20230620111943 1.png" alt="" class="companies-img">
         <img src="/day17_wasteProcessingWebsite/assets/Jogja_Istimewa_Wordmark (1) 1.png" alt="" class="companies-img">
     </div>
+
+    <!-- maps section -->
+    <div class="map-section">
+        <div class="map-img">
+            <img src="/day17_wasteProcessingWebsite/assets/Map.png" alt="">
+        </div>
+        <div class="map-txt">
+            <p class="mediump">Maps</p>
+            <h2>Find your nearest waste bank</h2>
+            <p class="smallp">Lorem ipsum dolor sit amet consectetur. Nisl donec tortor volutpat id pharetra ultricies mauris. Eget augue at egestas et consequat quis ultricies. At vel aenean posuere neque a fermentum donec eros ut. Nullam mi egestas sed facilisis.</p>
+            <input type="search" placeholder="Search your waste bank here!">
+        </div>
+    </div>
+
+
+
+
 
 
     <!-- footer -->
@@ -170,9 +212,38 @@
             <p>Press</p>
             <p>Affiliates</p>
         </div>
-        <!-- <div class="footer-3">
-
-        </div> -->
+        <div class="footer-4">
+            <h4>More</h4>
+            <p>Airlinefees</p>
+            <p>Airline</p>
+            <p>Low fare tips</p>
+        </div>
+        <div class="footer-5">
+            <h4>Discover our App</h4>
+            <div class="mini-footer">
+                <div class="playstore-1">
+                    <img src="/day17_wasteProcessingWebsite/assets/Group 12700.png" alt="">
+                    <div class="playstore-p">
+                        <p>get it on</p>
+                        <p>google play</p>
+                    </div>
+                </div>
+                <div class="playstore-1">
+                    <img src="/day17_wasteProcessingWebsite/assets/Vector (1).png" alt="">
+                    <div class="playstore-p">
+                        <p>Available on the</p>
+                        <p><b>Playstore</b></p>
+                    </div>
+                </div>
+            </div>
+            <div class="playstore-2">
+                <div class="social-div">
+                    <img src="/day17_wasteProcessingWebsite/assets/Frame 427319357.png" alt="">
+                    <img src="/day17_wasteProcessingWebsite/assets/Frame 427319358.png" alt="">
+                    <img src="/day17_wasteProcessingWebsite/assets/Frame 427319359.png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
 
