added new files

--- a/bank_ui/index.html
+++ b/bank_ui/index.html
@@ -29,6 +29,10 @@
             text-decoration: none;
             color: black;
         }
+        a{
+            text-decoration: none;
+
+        }
         span{
             margin-left: 10px;
             color: blueviolet;
@@ -82,7 +86,7 @@
         <div class="body-div1">
             <h1>Bounty Bank</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum quaerat possimus fuga molestias quidem culpa esse vel. Illo voluptatem officia debitis porro laudantium natus nam. Porro, quis. Debitis, ullam ex.</p>    
-            <button class="homebtn">Begin Your journey</button>
+            <button class="homebtn"><a href="home.html">Begin Your journey</a></button>
         </div>
         <div class="body-div2">
             <img src="/bank_ui/img2c.jpg" alt="" class="home-img">
@@ -90,6 +94,7 @@
     </section>
 
 
+    
 
 
 </body>
